== (In Git)

=== New Features
* Transform has current "World" scope (Larry Diehl)
* Other Transforms can be reused by calling Transform with a string inside of another Transform definition (Larry Diehl)
* Execute "After" hooks in reverse order of declaration for better behavior with dependent blocks and to mimic the behavior of at_exit (David Waite)

=== Bugfixes
* rspec-rails, :lib => false (#447 David Chelimsky)
* Cucumber with Spork breaks on OS X Snow Leopard (#431 David Chelimsky)

== 0.3.101 2009-09-15

Two exciting things in this release. Step Argument Transforms and a PDF formatter you can use to send
your features to your customer for review!

=== New Features
* New pdf formatter (#425 Mads Buus)
* Step Argument Transforms: These let you use the Transform method to register regular expressions
  to catch and transform/coerce arguments before they are yielded to step definitions:
  http://wiki.github.com/aslakhellesoy/cucumber/step-argument-transforms (Larry Diehl & Dave Astels)
* Adding webrat steps for asserting content does or does not exist within a particular element
  (using webrat's within method)  (Kieran Pilkington)

== 0.3.100 2009-09-09

The JavaZone release!

=== New Features
* Added support for Uzbek (msarvar)
* The file argument on the cucumber command line will replace contents of file on cli if file is prefixed with @ (Tero Tilus)

=== Bugfixes
* Backtraces on JRuby are handled in a cleaner way when the exception comes from Java (NativeException). (Aslak Hellesøy)
* When exceptions occur in a Before block the rest of the scenario is now skipped (#331 Matt Wynne)

== 0.3.99 2009-09-03

=== New Features
* Support for Croatian (Bkrsta)
* Make #feature available from scenario so you can do: Before{|scenario| scenario.feature}. (Aslak Hellesøy)
* cucumber.yml parsing supports ERB syntax (#427 Gregory Hnatiuk)
* New AfterConfiguration hook added; a block can be specified that takes Cucumber::Cli::Configuration (#423 Brent Snook)