@@ -6,6 +6,7 @@
 * Execute "After" hooks in reverse order of declaration for better behavior with dependent blocks and to mimic the behavior of at_exit (David Waite)
 
 === Bugfixes
+* Missing step_definition snippets not properly displayed (#433 Aslak Hellesøy)
 * rspec-rails, :lib => false (#447 David Chelimsky)
 * Cucumber with Spork breaks on OS X Snow Leopard (#431 David Chelimsky)
 
